2019-10-03 Fixed TTS reading Image Viewer alt text after entering a page
2019-09-27 Fix ImageViewerPublic model upgrade.
2019-09-26 Fixed disabling Image Gap module
2019-09-23 Added TTS support to Image Viewer
2019-09-17 Added a new text property for controlling how gap size attribute is calculated
2019-09-17 Added TTS support to the Animation addon
2019-09-13 Fixed TrueFalse showAnswers method when correct answers are empty.
2019-09-11 Added handling of online video files when offline
2019-09-10 Fixed getState breaking Swiffy Animation addon
2019-09-05 Added loading CSS styles to Editable Window
2019-09-04 Fixed IWB Toolbar zoom working incorrectly in iframe
2019-09-02 Fixed problem with fullscreen in iframe addon
2019-08-26 Added getter for Content metadata. Added SCORM passed/failed statuses.
2019-08-20 Added alt text support to text identification
2019-08-12 Fixed problem with editable window with audio on IE, EDGE, FIREFOX
2019-07-31 Blocked the download audio in Editable Window module
2019-07-26 Fixed scrolling while dragging the Slider on mobile devices
2019-07-26 Fixed issue with the values of newly added properties being overwritten
2019-07-26 Fixed opacity in Editable Window module
2019-07-22 Removed the ability to download the video in editable window
2019-07-19 Added supporting of only audio to Editable Window
2019-07-15 Fixed problem with editable window with video on IE
2019-07-11 Fixed test - position of IWB toolbar in fullscreen mode
2019-07-11 Fixed position of IWB toolbar in fullscreen mode
2019-07-04 Added translations for Sejer to Paragraph and Editable Window
2019-07-03 Changed structure of a Editable Window
2019-06-27 Fixed saving and closing notes on mobile devices in IWB Toolbar module
2019-06-19 Fixed anchors in Editable Window
2019-06-11 Fixed issue with Report when multiple pages have the same name
2019-06-11 Fixed issue with background color in show answers mode of Text Coloring