@@ -1,3 +1,4 @@
+2019-10-07 Fixed issues on Edge and mlibro
 2019-10-03 Fixed TTS reading Image Viewer alt text after entering a page
 2019-09-27 Fix ImageViewerPublic model upgrade.
 2019-09-26 Fixed disabling Image Gap module
